PROJECT(suffix_array)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
set(CMAKE_CXX_FLAGS "-g")
SET(RADIX_SRC radix_sort.cc)
SET(SUFFIX_SRC suffix.cc)
ADD_EXECUTABLE(radix ${RADIX_SRC})
ADD_EXECUTABLE(suffix_test ${SUFFIX_SRC})
TARGET_LINK_LIBRARIES(radix pthread libgtest.so libgtest_main.so)
TARGET_LINK_LIBRARIES(suffix_test pthread libgtest.so libgtest_main.so)
