PROJECT(priority_queue)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
set(CMAKE_CXX_FLAGS "-g")
SET(SRC_VECTOR seria_vector_test.cc)
SET(SRC_QUEUE priority_queue_test.cc)
ADD_EXECUTABLE(seria_vector_test ${SRC_VECTOR})
ADD_EXECUTABLE(queue_test ${SRC_QUEUE})
TARGET_LINK_LIBRARIES(seria_vector_test pthread libgtest.so libgtest_main.so)
TARGET_LINK_LIBRARIES(queue_test pthread libgtest.so libgtest_main.so)
